resources/gitops-config/operators/prometheus-community/templates/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: svc-gateway
      namespace: kube-system
      sectionName: svc-https-listener
  hostnames:
    - grafana.svc.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
